Added deps: ejson

--- a/rebar.config
+++ b/rebar.config
@@ -3,3 +3,12 @@
         "apps/dmill_stacker"
     ]
 }.
+
+{deps_dir, "deps"}.
+
+{deps,
+    [
+        {ejson, ".*",
+            {git, "git://github.com/benoitc/ejson.git", {branch, "master"}}}
+    ]
+}.
