Added reclaimer skeleton.

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,7 @@
 {sub_dirs,
     [
-        "apps/datamill_stacker"
+        "apps/datamill_stacker",
+        "apps/datamill_reclaimer"
     ]
 }.
 
